--- a/webapp/Pages/Index.cshtml
+++ b/webapp/Pages/Index.cshtml
@@ -5,5 +5,5 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">This is our sample web application on GitHub</h1>
+    <h1 class="display-4">This is our sample web application on GitHub - version 3</h1>
 </div>
